Fjerner Mock-oauth2-server og bedre navngivning.